# openair-rs-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  FORMAT.txt  README.md  README_ORIG.md  RELEASING.md  cspell-dictionary.txt  cspell.json  mypy.ini  pyproject.toml
.github/workflows/: publish.yml
example_data/: pao2025.txt
python/: cli.py  example.py
python/openair/: __init__.py  __init__.pyi
src/: lib.rs  python.rs
