[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openair-rs-py"
version = "0.1.4"
description = "Python bindings for OpenAir airspace file parser"
requires-python = ">=3.8"
keywords = ["airspace", "aviation", "openair", "parser"]
license = {text = "MIT/Apache-2.0"}
authors = [
    {name = "Danilo Bargen", email = "mail@dbrgn.ch"},
    {name = "Simon Steiner", email = "simonsteiner@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dynamic = []

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "maturin>=1.9.1",
    "mypy>=1.16.1",
    "pre_commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "twine>=6.1.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python"
